neg/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neg-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - name: sample
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
