neg/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: neg-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: sample
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
