neg/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: neg-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: neg-svc
          servicePort: 80
